--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,1 @@
-# Ignore node_modules and cache
-node_modules/
-client/node_modules/
-.cache/
-client/.cache/
-
-# OS and IDE junk
-.DS_Store
-Thumbs.db
-.vscode/
-.env
+node_modules
