--- a/package.json
+++ b/package.json
@@ -1,27 +1,18 @@
 {
-  "name": "budgetboss-expense-management-system",
+  "name": "budgetboss-expense_management_system",
   "version": "1.0.0",
-  "description": "BudgetBoss - Modern expense management and budget tracking application",
-  "main": "server.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "server": "nodemon server.js",
+    "server": "nodemon ./server/server.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\" "
   },
   "keywords": [],
-  "author": "Tarun Varshney",
+  "author": "",
   "license": "ISC",
-  "dependencies": {
-    "colors": "^1.4.0",
+  "devDependencies": {
     "concurrently": "^9.2.0",
-    "cors": "^2.8.5",
-    "dotenv": "^17.0.1",
-    "express": "^5.1.0",
-    "moment": "^2.30.1",
-    "mongoose": "^8.16.1",
-    "morgan": "^1.10.0",
     "nodemon": "^3.1.10"
   }
 }
