--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy": "http://localhost:8080/api/users/v1/register",
+  "proxy": "http://localhost:8080",
   "name": "budgetboss-client",
   "version": "0.1.0",
   "private": true,
